--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,14 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://172.16.182.211:3306/test?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://127.0.0.1:3306/springboot_try?useUnicode=true&characterEncoding=utf8
     username: root
-    password: root
+    password: 123456Aa
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password: 123456Aa
+
 #spring boot集成mybatis的方式打印sql
 logging:
   level:
